--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 html {
   position: absolute;
-  background: url(images/chicago-mural.jpg) no-repeat center center fixed; 
+  background: url(public/images/chicago-mural.jpg) no-repeat center center fixed; 
   background-color: rgb(175,160,148);
   -webkit-background-size: cover;
   -moz-background-size: cover;
