--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,7 @@ body {
 
 html {
   position: absolute;
-  background: url(public/images/chicago-mural.jpg) no-repeat center center fixed; 
+  background: url("/images/chicago_mural.jpg") no-repeat center center fixed; 
   background-color: rgb(175,160,148);
   -webkit-background-size: cover;
   -moz-background-size: cover;
